--- a/RoboBrakes/RoboBrakes.csproj
+++ b/RoboBrakes/RoboBrakes.csproj
@@ -9,6 +9,7 @@
     <AssemblyName>RoboBrakes</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <Description>Part Module and Action for Kerbal Space Program - Automatic Braking and Control System</Description>
+    <ReleaseVersion>0.3</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <Optimize>true</Optimize>
@@ -27,21 +28,19 @@
       <HintPath>..\..\..\..\..\..\Program Files %28x86%29\Steam\steamapps\common\Kerbal Space Program\KSP_Data\Managed\UnityEngine.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="FerramAerospaceResearch">
-      <HintPath>..\..\..\..\..\..\Program Files %28x86%29\Steam\steamapps\common\Kerbal Space Program\GameData\FerramAerospaceResearch\Plugins\FerramAerospaceResearch.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Scale_Redist">
-      <HintPath>..\..\..\..\..\..\Program Files %28x86%29\Steam\steamapps\common\Kerbal Space Program\GameData\FerramAerospaceResearch\Plugins\Scale_Redist.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Properties\AssemblyInfo.cs">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Compile>
-    <Compile Include="RoboBrakesMono.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ModuleRoboBrakes.cs" />
+    <Compile Include="RoboBrakesMono.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <Folder Include="Library\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Library\FerramAerospaceResearch.dll" />
+    <None Include="Library\ferramGraph.dll" />
+    <None Include="Library\Scale_Redist.dll" />
+  </ItemGroup>
 </Project>
